# omnix

./: AGENTS.md  CLAUDE.md  change.diff  justfile  omnix-chatcompletions.patch  omnix-full.patch
.github/scripts/: check_ci_results.py  verify_cargo_workspace_manifests.py
.github/workflows/: postmerge-ci.yml  rust-ci.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/.config/: nextest.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: chatgpt_stubs.rs  config_manager.rs  config_manager_service_tests.rs  extensions.rs  in_process.rs  lib.rs  message_processor.rs  request_processors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  lib.rs  login.rs  main.rs
codex-rs/cli/tests/: features.rs
codex-rs/cloud-config/: Cargo.toml
codex-rs/cloud-config/src/: backend.rs  bundle_loader.rs  lib.rs  service.rs  service_tests.rs
codex-rs/codex-api/src/: common.rs  lib.rs  provider.rs
codex-rs/codex-api/tests/: clients.rs
codex-rs/config/src/: config_toml.rs
codex-rs/core/: Cargo.toml
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: discoverable.rs  discoverable_tests.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  plugin_bundle_archive.rs  store.rs  test_support.rs
codex-rs/core/src/: chat_completions_observability.rs  chat_completions_observability_tests.rs  client.rs  client_tests.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  compact_tests.rs  lib.rs  mcp_openai_file.rs  realtime_conversation.rs  request_metadata.rs  session_startup_prewarm.rs  stream_retry.rs  test_support.rs  turn_metadata.rs  turn_metadata_tests.rs  turn_timing.rs  util.rs
codex-rs/core/tests/: live_deepseek_cache.rs  responses_headers.rs
codex-rs/features/src/: lib.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/login/: BUILD.bazel  Cargo.toml
codex-rs/login/src/: lib.rs  (+2 more)
codex-rs/model-provider/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/omnix-runtime/: BUILD.bazel  Cargo.toml
codex-rs/omnix-runtime/src/: config_translate.rs  config_translate_tests.rs  dirs.rs  error.rs  lib.rs  manifest.rs  process.rs  run.rs  runtime.rs  session.rs  spec.rs  start_args.rs  start_args_tests.rs  tools.rs
codex-rs/omnix-runtime/src/events/: consumer.rs  consumer_tests.rs  mapping.rs  mod.rs  tool_dispatch.rs
codex-rs/omnix-runtime/tests/: hardening.rs  phase1_start.rs  phase2_session_run.rs
codex-rs/omnix-runtime/tests/common/: mod.rs
codex-rs/omnix-sdk/: BUILD.bazel  Cargo.toml
codex-rs/omnix-sdk/examples/: minimal_pack.rs
codex-rs/omnix-sdk/src/: builder.rs  error.rs  error_map.rs  event.rs  instruction.rs  lib.rs  process.rs  run.rs  runtime.rs  session.rs
codex-rs/omnix-sdk/src/config/: mod.rs  model.rs  subconfigs.rs
codex-rs/omnix-sdk/src/pack/: loader.rs  mod.rs
codex-rs/omnix-sdk/src/tools/: erased.rs  mod.rs  registry.rs
codex-rs/omnix-sdk/tests/: business_pack.rs  live_deepseek.rs  public_api.rs  structured_output.rs  tool_call.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/secrets/: Cargo.toml
docs/: slim-agent-loop-notes.md
(+134 files in other folders)
