[package]
name = "omnix-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "omnix_sdk"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
omnix-runtime = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
core_test_support = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
