[package]
name = "omnix-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "omnix_sdk"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
omnix-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
core_test_support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
